--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>MUHAMMED SHAFEEQUE</title>
+        <title>MUHAMMED SHAFEEQUE P</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Custom Google font-->
@@ -185,9 +185,9 @@
                                 <p class="lead fw-light mb-4">My name is MUHAMMED SHAFEEQUE  and I help brands grow.</p>
                                 <p class="text-muted">Transforming ideas into dynamic reality through MERN stack expertise, committed to building seamless and innovative web solutions.</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
-                                    <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
-                                    <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
-                                    <a class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                                    <a class="text-gradient" href=""><i class="bi bi-instagram"></i></a>
+                                    <a class="text-gradient" href="https://www.linkedin.com/in/muhammed-shafeeque-vazhakkili/"><i class="bi bi-linkedin"></i></a>
+                                    <a class="text-gradient" href="https://github.com/muhammedshafeeque"><i class="bi bi-github"></i></a>
                                 </div>
                             </div>
                         </div>
