--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>MUHAMMED SHAFEEQUE</title>
+    <title>MUHAMMAD SHAFEEQUE</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Custom Google font-->
@@ -81,6 +81,7 @@
                   <div class="d-inline-block bi bi-download me-2"></div>
                   Download Resume
                 </a>
+
               </div>
               <!-- Experience Card 1-->
               <div class="card shadow border-0 rounded-4 mb-5">
@@ -98,11 +99,7 @@
                     </div>
                     <div class="col-lg-8">
                       <div>
-                        I got A chance to Contribute In Rawdata's Dream Project
-                        "InTEution ", I developed A compleat module For this
-                        product and implemented URP in inteution , I also
-                        Developed A complete Project For Bangalore Accenture as
-                        the part of our services program
+                        I'm delighted to share that I had a remarkable opportunity to contribute to Rawdata's visionary project, "InTEution." In this pursuit, I spearheaded the development of a comprehensive module known as CMNR, which played a pivotal role in the product's realization. Despite the initial estimation of a three-month timeline, our dedicated team successfully brought this module to life within an impressive 1.5 months. Moreover, I played a key role in implementing user role permissions (URP) within InTEution, enhancing its security and usability.
                       </div>
                     </div>
                   </div>
@@ -126,9 +123,7 @@
                     </div>
                     <div class="col-lg-8">
                       <div>
-                        My Teem developed a digital market for travel Industry,
-                        this Software making healthy competition in industry
-                        thats making advantages to peoples,
+                        Our team's accomplishment shines bright in the travel industry—we've successfully crafted a digital marketplace that's revolutionizing the way people travel. This innovative software has brought about a healthy wave of competition within the industry, resulting in numerous advantages for individuals and businesses alike.
                       </div>
                     </div>
                   </div>
@@ -164,9 +159,9 @@
                     </div>
                     <div class="col-lg-8">
                       <div>
-                        Completed Poly technic in Electrical Engineering with
-                        6.75 CGPA , This corse helped to me for learn
-                        engineering skills
+                        I am proud to have successfully completed my Polytechnic studies in Electrical Engineering, achieving a commendable GPA of 6.75. This educational journey has proven to be instrumental in honing my engineering skills and shaping my understanding of the field.
+
+                        Through this course, I have gained a comprehensive foundation in Electrical Engineering, equipping me with essential knowledge and hands-on experience. The practical skills I've acquired have empowered me to approach real-world challenges with confidence and competence.
                       </div>
                     </div>
                   </div>
@@ -193,10 +188,7 @@
                     </div>
                     <div class="col-lg-8">
                       <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Delectus laudantium, voluptatem quis repellendus eaque
-                        sit animi illo ipsam amet officiis corporis sed aliquam
-                        non voluptate corrupti excepturi maxime porro fuga.
+                        
                       </div>
                     </div>
                   </div>
@@ -207,7 +199,7 @@
             <div class="pb-5"></div>
             <!-- Skills Section-->
             <section>
-              <!-- Skillset Card-->
+              <!-- Skillet Card-->
               <div class="card shadow border-0 rounded-4 mb-5">
                 <div class="card-body p-5">
                   <!-- Professional skills list-->
