--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body class="d-flex flex-column">
@@ -60,20 +61,20 @@
                             <!-- To make this form functional, sign up at-->
                             <!-- https://startbootstrap.com/solution/contact-forms-->
                             <!-- to get an API token!-->
-                            <form id="contactForm"
-                                data-sb-form-api-token="https://script.google.com/macros/s/AKfycby0xVXeLFwyRAQPV4vsCtg_yyGB3SWR7QJ9CMij-RP8etZFXUyFqYc2Dfyi-cu0imhX/exec">
+                            <form id="submit-form" action=""
+                          >
                                 <!-- Name input-->
                                 <div class="form-floating mb-3">
-                                    <input class="form-control" id="name" type="text" placeholder="Enter your name..."
-                                        data-sb-validations="required" />
+                                    <input class="form-control" name="name" id="name" type="text" placeholder="Enter your name..."
+                                        required />
                                     <label for="name">Full name</label>
                                     <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.
                                     </div>
                                 </div>
                                 <!-- Email address input-->
                                 <div class="form-floating mb-3">
-                                    <input class="form-control" id="email" type="email" placeholder="name@example.com"
-                                        data-sb-validations="required,email" />
+                                    <input class="form-control" id="email" name="email" type="email" placeholder="name@example.com"
+                                    required />
                                     <label for="email">Email address</label>
                                     <div class="invalid-feedback" data-sb-feedback="email:required">An email is
                                         required.</div>
@@ -82,17 +83,17 @@
                                 </div>
                                 <!-- Phone number input-->
                                 <div class="form-floating mb-3">
-                                    <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890"
-                                        data-sb-validations="required" />
+                                    <input class="form-control" id="phone" name="phone" type="tel" placeholder="(123) 456-7890"
+                                        required />
                                     <label for="phone">Phone number</label>
                                     <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is
                                         required.</div>
                                 </div>
                                 <!-- Message input-->
                                 <div class="form-floating mb-3">
-                                    <textarea class="form-control" id="message" type="text"
+                                    <textarea class="form-control" id="message" name="message" type="text"
                                         placeholder="Enter your message here..." style="height: 10rem"
-                                        data-sb-validations="required"></textarea>
+                                        ></textarea>
                                     <label for="message">Message</label>
                                     <div class="invalid-feedback" data-sb-feedback="message:required">A message is
                                         required.</div>
@@ -118,7 +119,7 @@
                                     <div class="text-center text-danger mb-3">Error sending message!</div>
                                 </div>
                                 <!-- Submit Button-->
-                                <div class="d-grid"><button class="btn btn-primary btn-lg disabled" id="submitButton"
+                                <div class="d-grid"><button class="btn btn-primary btn-lg " 
                                         type="submit">Submit</button></div>
                             </form>
                         </div>
@@ -130,6 +131,25 @@
     <!-- Footer-->
 
     <!-- Bootstrap core JS-->
+    <script>
+        $("#submit-form").submit((e)=>{
+            e.preventDefault()
+            $.ajax({
+                url:"https://script.google.com/macros/s/AKfycbxQiziL3L9zMp9AJDvAr_SbpzHc5uv5lqj9Gs5TJX0sLnFImaqj3nqhrcdYvE9F2Jbh/exec",
+                data:$("#submit-form").serialize(),
+                method:"post",
+                success:function (response){
+                    alert("Form submitted successfully")
+                    window.location.reload()
+                    //window.location.href="https://google.com"
+                },
+                error:function (err){
+                    alert("Something Error")
+    
+                }
+            })
+        })
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
