--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                   solutions.
                 </p>
                 <div class="d-flex justify-content-center fs-2 gap-4">
-                  <a class="text-gradient" href=""
+                  <a class="text-gradient" href="https://www.instagram.com/shafeeque_p__kkv"
                     ><i class="bi bi-instagram"></i
                   ></a>
                   <a
