--- a/projects.html
+++ b/projects.html
@@ -131,30 +131,23 @@
                 <div class="d-flex align-items-center">
                   <div class="p-5">
                     <h2 class="fw-bolder">
-                      Accounting Application for Supermarkets
+                      Sales App - Salesman Tool in Intuition Environment
                     </h2>
                     <p>
-                      <strong>Technologies:</strong> MERN Stack (MongoDB,
-                      Express.js, React, Node.js), React Bootstrap, React Form
-                      Hooks
+                      <strong>Technologies:</strong> Angular, Angular Material
+                    </p>
+                    <p>
+                      <strong>Role:</strong> Front-End Lead (3 team Members)
                     </p>
 
                     <p>
-                      <strong>Description:</strong> PMH Accounts is an
-                      accounting application designed specifically for
-                      supermarkets. It encompasses a range of functionalities,
-                      including Profit and Loss (P&L) reporting, billing, and
-                      stock management. Leveraging the power of the MERN stack
-                      and modern front-end technologies, PMH Accounts is a
-                      versatile solution that streamlines supermarket
-                      operations and enhances financial management.
+                      <strong>Description:</strong> The Sales App is a powerful tool designed to assist salespeople in optimizing
+                       their sales processes within the Inteuition environment. 
+                       This application streamlines various sales activities,
+                        providing essential features that enhance efficiency and productivity for sales teams.
                     </p>
-                    <p>
-                      <strong>GitHub Repository:</strong>
-                      <a href="https://github.com/muhammedshafeeque/pmh-billing.git">View on GitHub</a>
-                    </p>
+                    
                   </div>
-                  <img class="img-fluid" style="max-width: 40%; min-height: 14rem" src="./assets/pmhb.png" alt="..." />
                 </div>
               </div>
             </div>
